<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ghrs_navigation</name>
  <version>1.0.0</version>
  <description>GHRS autonomous navigation: GPS waypoint patrol, obstacle avoidance, fire tracking</description>
  <maintainer email="anmar.arafat@tsr1.dev">Anmar Arafat Al-Momani</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ghrs_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
