<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ghrs_perception</name>
  <version>1.0.0</version>
  <description>GHRS perception nodes: fire detection, obstacle detection, plant disease, turret tracking</description>
  <maintainer email="anmar.arafat@tsr1.dev">Anmar Arafat Al-Momani</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>ghrs_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
